# librime-bert-gram

./: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  IMPLEMENTATION_GUIDE.md  LICENSE  README.md  TESTING.md  USAGE.md
bert_grammar/: bert-base-chinese.onnx
libime-plugin-bert/: CMakeLists.txt  IMPLEMENTATION_GUIDE.md  bert_language_model.cpp  bert_language_model.h  example_usage.cpp
python/: ONNX_C_USAGE.md  README.md  USAGE_RIME_DLL.md  call_librime.py  convert_to_onnx.py  example_usage.py  example_use_dll_wrapper.py  input_method_scorer.py  input_method_scorer_v2.py  quick_start.py  requirements.txt  rime_bert_integration_demo.py  simple_example.py  test_onnx_model.py
src/: bert_grammar.cc  bert_grammar.h  bert_grammar_module.cc  bert_grammar_onnx.h  test_bert_grammar.cc
